manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - local-demo.test
    secretName: hello-tls

  rules:
  - host: local-demo.test
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: hello-app1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: hello-app2
            port:
              number: 80
